<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/colorstrip" />

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onHomeClick"
            android:src="@drawable/ic_title_home" />

        <ImageView style="@style/TitleBarSeparator" />



        <TextView
            android:id="@id/title_text"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.68"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:paddingLeft="12dip"
            android:paddingRight="12dip"
            android:singleLine="true"
            android:text="@string/title_qr"
            android:textColor="@color/title_text"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <ImageView style="@style/TitleBarSeparator" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/dataLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >



            <LinearLayout
                android:id="@+id/headLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            </LinearLayout>


            <LinearLayout
                android:id="@+id/footerLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>


        <TextView
            android:id="@+id/guidetextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/audioguia"
            android:textAppearance="?android:attr/textAppearanceLarge" />




        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" >







            <ToggleButton
                android:id="@+id/audioToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="ToggleButton"
                android:textOff="@string/play"
                android:textOn="@string/pause" />



            <Button
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop" />

        </LinearLayout>

        <Button
            android:id="@+id/moreInfoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:text="@string/btn_more_info" />

        <LinearLayout
            android:id="@+id/audioLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ratingLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
