<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2010 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/home_root"
 android:orientation="vertical"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent">
    <include layout="@layout/colorstrip"/>
    
    <LinearLayout style="@style/TitleBar" >

        <View style="@style/TitleBarSpring" />

       

        <ProgressBar
            android:id="@+id/title_refresh_progress"
            style="@style/TitleBarProgressIndicator"
            android:visibility="gone" />

     

        <Button
            android:id="@+id/transparente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.80" 
            android:background="@color/foreground1"/>
    </LinearLayout>
    
    <LinearLayout
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:padding="6dip">
        <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">

            <Button
                android:id="@+id/home_btn_salir"
                style="@style/HomeButton"
                android:drawableTop="@drawable/home_btn_office_hours"
                android:onClick="onSalirClick"
                android:text="@string/btn_salir" />

            <Button android:id="@+id/home_btn_qr"
             style="@style/HomeButton"
             android:onClick="onQrClick"
             android:text="@string/btn_qr"
             android:drawableTop="@drawable/home_btn_map"/>

            <Button
                android:id="@+id/home_btn_idioma"
                style="@style/HomeButton"
                android:drawableTop="@drawable/home_btn_sandbox"
                android:onClick="onIdiomaClick"
                android:text="@string/btn_idioma" />

        </LinearLayout>
    </LinearLayout>
    
    
    
</LinearLayout>
